Fixed grid wrapper overflowing on small devices

--- a/portfolio-site/src/Components/Content/content.scss
+++ b/portfolio-site/src/Components/Content/content.scss
@@ -16,7 +16,6 @@ div#contents-wrapper {
 
 	// Appearance
 	padding-bottom: 3.5em;
-	//padding-top: 100vh;
 
 	// Positioning
 	position: relative;
@@ -45,7 +44,7 @@ div#contents-wrapper {
 			border-radius: 0.3rem;
 
 			// Sizing
-			padding: 0.5rem 1.5rem;
+			padding: 0.5rem;
 			width: 100%;
 			min-height: 3rem;
 			min-height: 50vh; // TODO remove at later date when there is content
